# cse508

alcatraz-0.6.4/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  config.h  config.h.in  config.status  configure  configure.in  libtool  log
alcatraz-0.6.4/GUI/: AlcatrazUI.java  CommHandler.java  CommServer.java  Constants.java  ExecuteDialog.java  FilesDiffWindow.java  FilesWindow.java  Makefile  Makefile.am  Makefile.in  MyRenderer.java  TreePanel.java
alcatraz-0.6.4/policies/: Confinement.cpp  Confinement.h  Makefile  Makefile.am  Makefile.in  libconfinement.la  libconfinement_la-Confinement.lo
alcatraz-0.6.4/policies/.deps/: libconfinement_la-Confinement.Plo
alcatraz-0.6.4/policies/.libs/: libconfinement.la  libconfinement.lai  libconfinement.so.0  libconfinement.so.0.0.0
alcatraz-0.6.4/scripts/: Makefile  Makefile.am  Makefile.in  alcatraz  mapfile.alc
alcatraz-0.6.4/src/: Alcatraz.cpp  Alcatraz.h  CommonDefs.h  ComplexCall.cpp  DirTools.cpp  DirTools.h  GUIInterface.cpp  GUIInterface.h  Isolation.cpp  LinuxTypes.h  Makefile  Makefile.am  Makefile.in  MappingTable.cpp  MappingTable.h  PathHashTable.h  PathMapping.cpp  PathMapping.h  ProcData.h  ViewMaintain.cpp  libalcatraz.la  libalcatraz_la-Alcatraz.lo  libalcatraz_la-ComplexCall.lo  libalcatraz_la-DirTools.lo  libalcatraz_la-GUIInterface.lo  libalcatraz_la-Isolation.lo  libalcatraz_la-MappingTable.lo  libalcatraz_la-PathMapping.lo  libalcatraz_la-ViewMaintain.lo
alcatraz-0.6.4/src/.deps/: libalcatraz_la-Alcatraz.Plo  libalcatraz_la-ComplexCall.Plo  libalcatraz_la-DirTools.Plo  libalcatraz_la-GUIInterface.Plo  libalcatraz_la-Isolation.Plo  libalcatraz_la-MappingTable.Plo  libalcatraz_la-PathMapping.Plo  libalcatraz_la-ViewMaintain.Plo
alcatraz-0.6.4/src/.libs/: libalcatraz.la  libalcatraz.lai  libalcatraz.so.0  libalcatraz.so.0.0.0
etrace-0.8.2/: AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  config.h  config.h.in  config.status  configure  configure.in  libtool
etrace-0.8.2/libetrace/: ArchDependent.h  ArgumentRep.h  ArgumentType.cpp  ArgumentType.h  ArgumentType.lo  Extension.cpp  Extension.h  Extension.lo  LinuxPtraceX86.lo  Makefile  Makefile.am  Makefile.in  ManagerClass.cpp  ManagerClass.h  ManagerClass.lo  MonitoredProc.cpp  MonitoredProc.h  MonitoredProc.lo  ProcHashTable.h  String.h  SystemCall.h  libetrace.la
etrace-0.8.2/libetrace/.deps/: ArgumentType.Plo  Extension.Plo  LinuxPtraceX86.Plo  ManagerClass.Plo  MonitoredProc.Plo
etrace-0.8.2/libetrace/.libs/: libetrace.la  libetrace.lai  libetrace.so.0  libetrace.so.0.0.0
etrace-0.8.2/libetrace/linux-ptrace-x86/: LinuxPtraceX86.cpp  LinuxPtraceX86.h  LinuxTypes.h  SysCallInfo.h  SysCallNum.h
etrace-0.8.2/src/: Makefile  Makefile.am  Makefile.in  etrace  main.cpp
etrace-0.8.2/src/.deps/: etrace-main.Po
etrace-0.8.2/src/.libs/: etrace
